<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_vitals"
        android:icon="@drawable/baseline_monitor_heart_24"
        android:title="@string/nav_health" />
    <item
        android:id="@+id/nav_meds"
        android:icon="@drawable/baseline_medication_24"
        android:title="@string/nav_meds" />
    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/nav_appointments" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/nav_profile" />
</menu>
